# l2next-crypto

./: .gitignore  CMakeLists.txt  CMakeSettings.json  LICENSE  README.md
Resources/L2NextCryptoApp/: config.yaml
Resources/LineageCryptoApp/: config.yaml
Source/L2NextCrypto/: CMakeLists.txt
Source/L2NextCrypto/Private/: L2NextCrypto.cpp  L2NextCrypto.h
Source/L2NextCrypto/Private/Crypto/Algorithms/41x/Duplex/: Ver41xDecDuplex.cpp  Ver41xEncDuplex.cpp
Source/L2NextCrypto/Private/Crypto/Algorithms/41x/Shared/: Ver41xParams.h
Source/L2NextCrypto/Private/Crypto/Algorithms/41x/Versions/: Ver411.h  Ver412.h  Ver413.h  Ver414.h
Source/L2NextCrypto/Private/Crypto/Algorithms/Base/Duplex/: AlgorithmDuplex.cpp
Source/L2NextCrypto/Private/Crypto/Algorithms/Shared/Rsa/: RsaBlock.cpp  RsaBlock.h  RsaEncryptedBlock.cpp  RsaEncryptedBlock.h
Source/L2NextCrypto/Private/Crypto/Algorithms/Shared/Zlib/Duplex/: DeflateDuplex.cpp  InflateDuplex.cpp
Source/L2NextCrypto/Private/Crypto/Algorithms/Shared/Zlib/Events/: OnInflateChunk.h
Source/L2NextCrypto/Private/Crypto/Enums/: CryptType.h
Source/L2NextCrypto/Private/Crypto/Validators/HeaderValidator/: HeaderValidator.cpp  HeaderValidator.h
Source/L2NextCrypto/Private/Crypto/Validators/HeaderValidator/Duplex/: HeaderValidatorDuplex.cpp
Source/L2NextCrypto/Private/Libs/: mini-gmp.c
Source/L2NextCrypto/Private/TaskRunner/: TaskRunner.cpp
Source/L2NextCrypto/Private/TaskRunner/Commands/: BaseCommand.cpp  Decrypt.cpp  Encrypt.cpp
Source/L2NextCrypto/Private/Utils/Streams/: DuplexStream.cpp  DuplexStream.h  InputStream.cpp  InputStream.h  OutputStream.cpp  ReadableStream.cpp  WritableStream.cpp
Source/L2NextCrypto/Private/Utils/Streams/Events/: OnData.cpp  OnTransformChunk.h
Source/L2NextCrypto/Private/Utils/Streams/Factory/: StreamFactory.cpp
Source/L2NextCrypto/Private/Utils/Streams/Traits/: Readable.cpp  Streamable.cpp  Writable.cpp
Source/L2NextCrypto/Public/: L2NextCrypto.h
Source/L2NextCrypto/Public/Crypto/: Crypto.h
Source/L2NextCrypto/Public/Crypto/Algorithms/41x/Duplex/: Ver41xDecDuplex.h  Ver41xEncDuplex.h
Source/L2NextCrypto/Public/Crypto/Algorithms/41x/Versions/: Ver411.h  Ver412.h  Ver413.h  Ver414.h
Source/L2NextCrypto/Public/Crypto/Algorithms/Base/: Algorithm.h
Source/L2NextCrypto/Public/Crypto/Algorithms/Base/Duplex/: AlgorithmDuplex.h
Source/L2NextCrypto/Public/Crypto/Algorithms/Base/Events/: OnDecryptChunk.h  OnDecryptFailed.h  OnDecryptPassed.h
Source/L2NextCrypto/Public/Crypto/Algorithms/Base/Structs/: DecryptResult.h
Source/L2NextCrypto/Public/Crypto/Algorithms/Shared/Rsa/: RsaBlock.h  RsaEncryptedBlock.h
Source/L2NextCrypto/Public/Crypto/Algorithms/Shared/ZLib/Duplex/: DeflateDuplex.h  InflateDuplex.h
Source/L2NextCrypto/Public/Crypto/Algorithms/Shared/ZLib/Events/: OnInflateChunk.h  OnInflateFailed.h
Source/L2NextCrypto/Public/Crypto/Algorithms/Shared/ZLib/Structs/: zlibResult.h
Source/L2NextCrypto/Public/Crypto/Enums/: DecryptError.h  DecryptErrorStatus.h  EncryptError.h  EncryptErrorStatus.h  HeaderVersion.h
Source/L2NextCrypto/Public/Crypto/Structs/: DecryptResult.h  EncryptResult.h
Source/L2NextCrypto/Public/Crypto/Validators/HeaderValidator/: HeaderValidator.h
Source/L2NextCrypto/Public/Crypto/Validators/HeaderValidator/Duplex/: HeaderValidatorDuplex.h
Source/L2NextCrypto/Public/Shared/Enums/: CryptoCommands.h
Source/L2NextCrypto/Public/Shared/Structs/: FileData.h  LineageFileSchema.h
Source/L2NextCrypto/Public/TaskRunner/: TaskRunner.h
Source/L2NextCrypto/Public/TaskRunner/Commands/: Decrypt.h  Encrypt.h
Source/L2NextCrypto/Public/Utils/Streams/: DuplexStream.h  InputStream.h  OutputStream.h  ReadableStream.h  WritableStream.h
Source/L2NextCrypto/Public/Utils/Streams/Factory/: StreamFactory.h
Source/L2NextCrypto/Public/Utils/Streams/Structs/: BufStreamOptions.h  FileStreamOptions.h  StreamOptions.h
Source/L2NextCrypto/Public/Utils/Streams/Traits/: Pipable.h  Readable.h  Streamable.h  Transformable.h  Writable.h
Source/L2NextCryptoApp/: CMakeLists.txt
Source/L2NextCryptoApp/Private/: L2NextCryptoApp.cpp
Source/L2NextCryptoApp/Private/ConfigReader/: ConfigReader.cpp
Source/L2NextCryptoApp/Private/ConfigReader/Struct/: ConfigBase.cpp
Source/L2NextCryptoApp/Private/Utils/: FileHelper.cpp  Logging.cpp
Source/L2NextCryptoApp/Public/: L2NextCryptoApp.h
Source/L2NextCryptoApp/Public/ConfigReader/: ConfigReader.h
Source/L2NextCryptoApp/Public/Utils/: FileHelper.h  Logging.h
Source/L2NextCryptoApp/Source/: L2NextCryptoApp.cpp  L2NextCryptoApp.h
Source/L2NextCryptoApp/Source/ConfigReader/: ConfigReader.cpp
Source/L2NextCryptoApp/Source/ConfigReader/Struct/: ConfigBase.h  ConfigPaths.h
Source/L2NextCryptoApp/Source/Utils/: FileHelper.cpp  Logging.cpp  Logging.h
Source/LineageCrypto/: CMakeLists.txt  LineageCrypto.cpp  LineageCrypto.h
Source/LineageCrypto/Private/: LineageCrypto.cpp
Source/LineageCrypto/Private/Crypto/: Crypto.cpp
Source/LineageCrypto/Private/TaskRunner/: TaskRunner.cpp
Source/LineageCrypto/Public/: LineageCrypto.h
Source/LineageCrypto/include/: LineageCrypto.h
Source/LineageCryptoApp/: CMakeLists.txt  LineageCryptoApp.cpp  LineageCryptoApp.h
Source/LineageCryptoApp/ConfigReader/: ConfigReader.cpp  ConfigReader.h
Source/LineageCryptoApp/ConfigReader/Struct/: ConfigPaths.h
Source/LineageCryptoApp/Private/: LineageCryptoApp.cpp
Source/LineageCryptoApp/Private/ConfigReader/: ConfigReader.cpp
Source/LineageCryptoApp/Private/ConfigReader/Struct/: ConfigPaths.cpp
Source/LineageCryptoApp/Public/: LineageCryptoApp.h
Source/LineageCryptoApp/Public/ConfigReader/: ConfigReader.h
Source/LineageCryptoApp/Public/ConfigReader/Struct/: ConfigBase.h  ConfigPaths.h
cmake/: FindBootstrap.cmake  FindL2NextCrypto.cmake  FindL2NextCryptoApp.cmake  FindLineageCrypto.cmake  FindLineageCryptoApp.cmake
cmake/App/: Functions.cmake  Macros.cmake  Resources.cmake  Sources.cmake  Variables.cmake  Verbiage.cmake
cmake/Shared/: Functions.cmake  Macros.cmake  Variables.cmake  Verbiage.cmake
(+99 files in other folders)
